# adopt-me-backend

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
app/: auth.py  cloudinary_config.py  database.py  email_service.py  enums.py  main.py
app/models/: __init__.py  models.py
app/routers/: Surrender.py  admin.py  animals.py  events.py  meetings.py  reports.py
app/schemas/: __init__.py  schemas.py
