[project]
name = "adopt-me-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "cloudinary>=1.44.1",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "ruff>=0.14.13",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
